tests/checker/bad/dead_code_test4.scilla
scilla_version 0

library SimpleImplDead4


contract SimpleImplDead4()

procedure dead_procedure (o : Option Int32)
  match o with
  | Some dead_binder =>
    x = Int32 2
  | None => 
    x = Int32 1
  end;
  (* x should not be live *)
  y = x
end

transition dummy()
end